# hw12

./: .gitignore  CMakeLists.txt  check_tensor.cpp  check_tensor.h  classifier.h  main.cpp  tf_classifier.cpp  tf_classifier.h
.github/workflows/: cmake.yml
